# AlbedoLog

./: CMakeLists.txt  README.md  main.cc
include/: AlbedoLog.hpp  CMakeLists.txt
include/backends/spdlog/: CMakeLists.txt  albedolog_backend.cc  albedolog_backend.h
include/backends/spdlog/spdlog-1.11.0/: CMakeLists.txt  README.md
include/backends/spdlog/spdlog-1.11.0/cmake/: spdlogCPack.cmake
